# trade_signal

./: Cargo.toml  README.md
configs/position_backtest/: config.toml
configs/position_backtest_sweep/: config.toml
configs/spot_backtest_sweep/: config.toml
src/: backtest.rs  config.rs  data.rs  indicators.rs  lib.rs  main.rs  output.rs  patterns.rs  signal.rs
src/backtest/: common.rs  mod.rs  position.rs  spot.rs
src/indicators/: atr.rs  mod.rs  regime.rs  sma.rs
