[package]
name = "trade_signal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow              = { version = "1.0" }
chrono              = { version = "0.4", features = ["serde", "clock"] }
clap                = { version = "4.5", features = ["derive"] }
config              = { version = "0.15" }
csv                 = { version = "1.4" }
rayon               = { version = "1.11" }
serde               = { version = "1", features = ["derive"] }
serde_json          = { version = "1.0" }
